# Garl-TTC

./: .gitignore  README.md  pyproject.toml  requirements.txt  sam_inference_utils.py
configs/: dataset_info.json  garl_ttc_eventdecoder.yaml
configs/ablation/: event_baseline.yaml  event_lhr.yaml  multimodal_baseline.yaml  multimodal_lhr_early.yaml  multimodal_lhr_late.yaml  ours_full.yaml  visual_baseline.yaml  visual_lhr.yaml
configs/splits/: benchmark_test.txt  smoke_test_71wUSQYMpk.txt  train.txt
garl_ttc/: __init__.py  config.py
garl_ttc/datasets/: __init__.py  event_representation.py  ttc_dataset.py
garl_ttc/engine/: __init__.py  evaluator.py  inference.py  metrics.py  runtime.py  trainer.py
garl_ttc/models/: __init__.py  focal_loss.py  resnet.py  ttc_network.py
garl_ttc/utils/: __init__.py  events.py  io.py  sam_masks.py
garl_ttc_benchmark/: __init__.py  build_garlttc_dataset.py  schema.py  stage_model_repo.py
garl_ttc_benchmark/codabench/: __init__.py  build_codabench_bundle.py
garl_ttc_benchmark/codabench/scoring_program/: __init__.py  score.py
garl_ttc_benchmark/evaluator/: __init__.py  evaluate_garlttc.py
scripts/: setup_release_assets.sh
tools/: eval.py  eval_ablation.py  generate_sam_masks.py  infer.py  train.py
